tests/invalid/int_cast_non_primitive/main.py
x: str = "hello"
y: int = int(x)
